@@ -1,3 +1,7 @@
+2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Gettext/GettextFeatureWidget.cs: Workaround to mcs bug.
+
 2007-08-09  Mike Krüger <mkrueger@novell.com> 
 
 	* gtk-gui/MonoDevelop.Gettext.GettextFeatureWidget.cs,
